큐, 배열 자료구조 학습

--- a/자료구조/1. 자료구조란.md
+++ b/자료구조/1. 자료구조란.md
@@ -34,3 +34,20 @@
 어떤 문제에 대해, 특정한 '입력'을 넣으면, 원하는 '출력'을 얻을 수 있도록 만드는 프로그래밍
 
 - 현실세계의 대표적인 알고리즘: 백종원 레시피 
+
+
+
+## 자료구조와 알고리즘이 중요한 이유
+
+- 어떤 자료구조와 알고리즘을 쓰느냐에 따라, 성능이 천지차!
+- 수 백만건의 데이터를 가지고 알고리즘을 시행하는 경우가 있는데, 이것을 어떻게 했느냐에 따라 성능의 차이가 천지차이이다.
+
+
+
+## 자료구조/ 알고리즘, 그리고 파이썬
+
+- 어떤 언어로든 자료구조/ 알고리즘 익힐 수 있음
+  - 이전에는 C 또는 C++로만 작성가능했었음..
+  - 최근에는 언어로 인한 제약/ 평가는 없어짐
+    - 가장 쉽고 빠르게 자료구조/ 알고리즘을 익힐 수 있는 언어: 파이썬
+    - 현업에서도 파이썬은 많이 사용됨
