금융 관련 내용 정리

--- a/자료구조/4. 꼭 알아둬야 할 자료 구조 스택 (Stack).md
+++ b/자료구조/4. 꼭 알아둬야 할 자료 구조 스택 (Stack).md
@@ -40,8 +40,11 @@ def recursive(data):
     else:
         print(data)
         recursive(data - 1)
+        # 자기함수를 출력하기 때문에 returned가 나온것
         print("returned", data)        
 ```
+
+![캡처](https://user-images.githubusercontent.com/58652391/93051246-22111800-f69f-11ea-9ad9-d0e8f7998776.PNG)
 
 In [3]:
 
@@ -68,6 +71,7 @@ returned 4
 - 단점 (일반적인 스택 구현시)
   - 데이터 최대 갯수를 미리 정해야 한다.
     - 파이썬의 경우 재귀 함수는 1000번까지만 호출이 가능함
+    - 1000개 정도의 공간을 확보해 두었기 때문에
   - 저장 공간의 낭비가 발생할 수 있음
     - 미리 최대 갯수만큼 저장 공간을 확보해야 함
 
@@ -102,6 +106,7 @@ In [6]:
 
 ```
 data_stack.pop()
+# 가장 마지막에 들어간 2가 나오게 된다.
 ```
 
 Out[6]:
