--- a/기술면접/기술면접 대비.md
+++ b/기술면접/기술면접 대비.md
@@ -21,4 +21,37 @@
 - 멀티 태스킹을 위한 프로세스 스케쥴링 방식을 구현하기 위해 많이 사용됨 (운영체제 참조)
 
 > 큐의 경우에는 장단점 보다는 (특별히 언급되는 장단점이 없음), 큐의 활용 예로 프로세스 스케쥴링 방식을 함께 이해해두는 것이 좋음
+>
+> 
 
+## 스택
+
+- 데이터를 제한적으로 접근할 수 있는 구조
+  - 한쪽 끝에서만 자료를 넣거나 뺄 수 있는 구조
+- 가장 나중에 쌓은 데이터를 가장 먼저 빼낼 수 있는 데이터 구조
+  - 큐: FIFO 정책 -> 줄
+  - 스택: LIFO 정책 -> 책 쌓기
+
+### 스택 구조
+
+- 스택은 LIFO(Last In, Fisrt Out) 또는 FILO(First In, Last Out) 데이터 관리 방식을 따름
+  - LIFO: 마지막에 넣은 데이터를 가장 먼저 추출하는 데이터 관리 정책
+  - FILO: 처음에 넣은 데이터를 가장 마지막에 추출하는 데이터 관리 정책
+- 대표적인 스택의 활용
+  - 컴퓨터 내부의 프로세스 구조의 함수 동작 방식
+- 주요 기능
+  - push(): 데이터를 스택에 넣기
+  - pop(): 데이터를 스택에서 꺼내기
+
+### 자료 구조 스택의 장단점
+
+- 장점
+  - 구조가 단순해서, 구현이 쉽다.
+  - 데이터 저장/읽기 속도가 빠르다.
+- 단점 (일반적인 스택 구현시)
+  - 데이터 최대 갯수를 미리 정해야 한다.
+    - 파이썬의 경우 재귀 함수는 1000번까지만 호출이 가능함
+  - 저장 공간의 낭비가 발생할 수 있음
+    - 미리 최대 갯수만큼 저장 공간을 확보해야 함
+
+> 스택은 단순하고 빠른 성능을 위해 사용되므로, 보통 배열 구조를 활용해서 구현하는 것이 일반적임. 이 경우, 위에서 열거한 단점이 있을 수 있음
