--- a/기술면접/기술 면접.md
+++ b/기술면접/기술 면접.md
@@ -33,19 +33,11 @@
 
 
 
-#### - Redis와 mongodb에 대해 간략히 설명
-
-- 둘다 No SQL 방식을 사용합니다. Mongodb가 document 형식으로 데이터를 저장하는데 반해, Redis는 Key-Value 형식으로 데이터를 저장함
-- Redis는 인메모리DB로 데이터를 메모리에 저장하고 관리하기 때문에 성능이 좋지만 데이터를 유한하게 저장하기 때문에 캐쉬등과 같이 데이터의 저장 기한이 있고, 빠른 성능이 필요한 기능에 사용됩니다.
-- Mongodb는 mysql처럼 서버-클라이언트 방식으로 설치해서 사용합니다. mysql과 같은 SQL 방식이 아니므로, 가변적 데이터 구조를 다루는데 유용합니다.
-
-
-
 #### - TCP와 UDP의 차이점과 장단점
 
 - TCP는 연결형 프로토콜로 흐름제어와 오류제어를 하지만 UDP는 비연결지향형 프로토콜로 흐름제어와 오류제어를 하지 않습니다.
 
-- UDP는 TCP처럼 종단간 연결설정, 흐름제어, 오류제어를 하지 않기 때문에 송수신에 적은 데이터를 필요로 하는데 반해, TCP는 데이터 송수신에 신뢰성을 가짐
+- UDP는 TCP처럼 흐름제어, 오류제어를 하지 않기 때문에 송수신에 적은 데이터를 필요로 하는데 반해, TCP는 데이터 송수신에 신뢰성을 가짐
 
 
 
@@ -63,7 +55,7 @@
 
   - 자바컴파일러가 java 소스코드를 통해 jvm이 이해할 수 있는 바이트코드로 변환된 (.class) 파일을 class 로더를 통해 JVM에 로딩한다.
 
-  - 로딩된 Class 파일은 excution engine을 통해 해석되고, 실행된다.
+  - 로딩된 Class 파일은 execution engine을 통해 해석되고, 실행된다.
 
   - 필요시 garbage collection을 수행해서 불필요하게 할당된 메모리를 해제한다.
 
@@ -77,19 +69,22 @@
 
 #### - Overriding VS Overloading
 
-- Overriding : 상위 클래스에 존재하는 메서드를 하위 클래스에 맞게 재정의 하는것 (메서드 이름 및 파라미터수 동일)
-- Overloading : 두메서드가 같은 이름을 가지고 있으나, 파라미터수나 자료형이 다른 경우
+- Overriding 
+  - 상위 클래스에 존재하는 메서드를 하위 클래스에 맞게 재정의 하는것 (메서드 이름 및 파라미터수 동일)
+  - 상속 관계에 있는 클래스간에 같은 이름의 메소드를 정의하는 기술로 메소드이름, 매개변수, 타입, 리턴타입 모두 같은 것이다.
+- Overloading 
+  -  두메서드가 같은 이름을 가지고 있으나, 파라미터 개수나 자료형이 다른 경우
 
 
 
 #### - Interface와 abstract
 
-- abstract
-  - 추상클래스는 추상메소드를 1개 이상 가지고 있는 클래스를 의미합니다. 기존 메소드 이외에 추상메서드를 상속시켜서, 반드시 구현이 필요한 내용인 추상메서드를 상속받은 클래스에서 구현시키는 것이 주목적 입니다. 
-  - 추상 메소드를 1개이상 가진 클래스는 객체 생성이 안되므로, 추상 클래스를 상속받은 클래스의 객체생성을 위해서는 추상 메서드를 구현해야 합니다.
-- interface
-  - 상수와 메소드 선언 집합, 정의된 메소드를 implements 받은 곳에서 모두 구현을 강제합니다.
-  - java는 단일 상속만을 지원하기 때문에 추상 클래스를 상속받은 클래스는 다른 클래스를 상속받을 수 없습니다. 그러나 인터페이스는 인터페이스끼리 상속이 가능하므로, 여러 인터페이스에서 상속이 가능함
+- abstract(추상클래스)
+  - 클래스가 설계도라면 추상클래스는 미완성설계도라고 할 수 있습니다. 추상클래스는 추상메소드를 1개 이상 가지고  있는 클래스 입니다.
+  - 여러개의 클래스 안에 반드시 구현이 필요한 내용이 공통적으로 있다면 공통적인 부분을 추상 클래스로 만들고 추상 클래스를 상속받아 클래스에서 구현할 수 있습니다.
+- interface(인터페이스)
+  - java는 단일 상속만을 지원하기 때문에 추상 클래스를 상속받은 클래스는 다른 클래스를 상속받을 수 없습니다. 그러나 인터페이스는 인터페이스끼리 상속이 가능하므로, 여러 인터페이스에서 상속 가능합니다.
+  - 자바의 다형성을 이용하여 개발 코드의 수정을 줄이고 유지보수성을 높일 수 있습니다.
 
 
 
@@ -102,27 +97,63 @@
 
 #### - 객체와 클래스의 차이점
 
+- 클래스가 제품 설계도라면 객체는 제품을 의미합니다. 즉 클래스란 객체를 정의해 놓은 것으로 객채를 생성하는데 사용됩니다.
+- 또한 객체는 실제로 존재하는 것을 의미합니다.
+
 
 
 #### - JAVA 메모리 영역
 
-
+- 메모리는 사용할 수 있는 공간이 한정되어 있기 때문에 이것을 어떻게 관리하느냐에 따라 프로그램의 성능이 좌우됩니다. 따라서 메모리를 효율적으로 사용하는 것은 중요합니다.
+- 메모리의 공간은 스태틱영역, 스택영역, 힙영역으로 구분되고 데이터 타입에 따라 해당 공간에 할당됩니다.
+- static 영역에는 전역변수와 static이 붙은 자료형이 static 영역에 데이터를 저장하는데 static 영역의 데이터는 프로그램의 시작부터 종료될 때까지 메모리에 남아있게 됩니다. 
+- stack 영역에는 기본자료형(int, long, boolean 등)에 해당되는 지역변수의 데이터 값이 저장됩니다. 해당 메소드가 호출될 때 메모리에 할당되고 종료되면 메모리가 해제됩니다.
+- Heap 영역에는 참조형의 데이터 타입을 갖는 객체, 배열 등의 데이터가 저장됩니다. 또한 heap에 저장된 데이터가 더이상 사용이 불필요하다면 메모리 관리를 위해 가비지컬렉션 기능이 수행됩니다.
 
 #### - Private, protected, public, default
+
+- 제어자는 클래스, 변수, 메서드의 선언부에 사용되어 부가적인 의미를 부여합니다.
+- 접근제어자는 멤버 또는 클래스에 사용되어 외부로부터의 접근을 제어합니다. 접근제어자를 사용하는 이유는 외부로부터 데이터를 보호하고 외부에는 불필요한 내부적으로만 사용되는 부분을 감추기 위해서 입니다.
+- private는 같은 클래스 내에서만 접근이 가능합니다.
+- default는 같은 패키지 내에서만 접근이 가능합니다.
+- protected는 같은 패키지 내에서 그리고 다른 패키지의 자손클래스에서 접근이 가능합니다.
+- public은 접근 제한이 전혀 없습니다.
 
 
 
 #### - 객체지향 5대 원칙
 
+1. 단일책임원칙
+   - 객체는 오직 하나의 책임을 가져야 합니다.(객체는 오직 하나의 변경의 이유만을 가져야 한다)
+2. 개방-폐쇄원칙
+   - 객체는 확장에 대해서는 개방적이고 수정에 대해서는 폐쇄적이여야 한다는 원칙입니다. 즉 객체 기능의 확장을 허용하고 스스로의 변경은 피해야 합니다.
+3. 리스코프 치환원칙
+   - 자식 클래스는 언제나 자신의 부모클래스를 대체할 수 있다는 원칙입니다. 즉 부모클래스가 들어갈자리에 자식 클래스를 넣어도 계획대로 잘 작동한 다는 것 입니다.
+4. 인터페이스 분리 원칙
+   - 클라이언트에서는 사용하지 않는 메서드는 사용해선 안되기 때문에 인터페이스를 다시 작게 나누어 만들어야 합니다.
+5. 의존성 역전 원칙
+   - 추상성이 높고 안정적인 고수준의 클래스는 구체적이고 불안정한 저수준의 클래스에 의존해서는 안된다는 원칙 입니다.
 
 
 
+# spring MVC
 
+1. 클라이언트가 Request 요청을 하면, DispatcherServlet이 요청을 가로챈다. 이 때 DispatcherServlet이 모든 요청을 가로채는 건 아니고 web.xml에 등록된 내용만 가로챈다. 최초의 web.xml 에서는 <url-pattern>이 '/'와 같이 해당 애플리케이션의 모든 URL로 등록돼있기 때문에, 만약 *. do와 같이 특정 URL만 적용하고 싶다면 <url-pattern>의 내용을 바꿔주어 범위를 변경하면 된다.
+2. DispatcherServlet이 가로챈 요청을 HandlerMapping에게 보내 해당 요청을 처리할 수 있는 Controller를 찾는다.
+3. 실제 로직 처리 (Controller -> Service -> DAO -> DB -> DAO -> Service -> Controller)
+4. 로직 처리 후 ViewResolver를 통해 view 화면을 찾는다.
+5. 찾은 view 화면을 View에 보내면 이 결과를 다시 DispatcherServlet에 보내고, DispatcherServlet는 최종 클라이언트에게 전송한다.
 
+### mybatis
+
+mybatis를 통해 관계형 데이터베이스를 자바의 객체지향 모델로 매핑하게 된다.
+
+mybatis data mapper 프레임워크는 관계형 데이터베이스에 접근할 때 필요한 자바코드를 현저하게 줄일 수 있도록 해준다.(distinct)
 
 ## 웹(프론트엔드 + Javascript)
 
 - MVC 패턴에 대해 설명해주세요
+  - MVC 패턴이란 model, view, controller의 합성어입니다. model은 백그라운드에서 동작하는 로직을 처리합니다. view는 사용자가 보게될 결과화면을 출력하는 것 입니다. controller는 사용자의 입력처리와 흐름제어를 담당합니다.
 - 브라우저의 랜더링 과정에 대해 설명해주세요
 - 가상 DOM과 DOM의 차이점에 대해 설명해주세요
 - ES6에 추가된 스펙에 대해 생각나는 것 몇가지만 설명해주세요
