자료구조-링크드리스트

--- a/자료구조/5. 대표적인 데이터 구조 링크드 리스트 (Linked List).md
+++ b/자료구조/5. 대표적인 데이터 구조 링크드 리스트 (Linked List).md
@@ -11,8 +11,10 @@
   - 노드(Node): 데이터 저장 단위 (데이터값, 포인터) 로 구성
   - 포인터(pointer): 각 노드 안에서, 다음이나 이전의 노드와의 연결 정보를 가지고 있는 공간
 
-
 \* 일반적인 링크드 리스트 형태![img](https://www.fun-coding.org/00_Images/linkedlist.png)(출처: wikipedia, https://en.wikipedia.org/wiki/Linked_list)
+
+- 링크드 리스트는 배열처럼 숫자만 있는것이 아니라, 숫자가 들어가 있는 공간과 주소값을 갖는 공간을 갖는다.
+- 위는 노드 3개, 포인터 3개가 있는 것이다.
 
 ### 2. 간단한 링크드 리스트 예
 
@@ -47,8 +49,10 @@ In [4]:
 ```
 node1 = Node(1)
 node2 = Node(2)
+# node1, node2 객체가 2개 만들어진다.
 node1.next = node2
 head = node1
+# 가장 맨앞에 있는 노드는 node1
 ```
 
 #### 링크드 리스트로 데이터 추가하기
@@ -764,3 +768,4 @@ node_mgmt.desc()
 node_mgmt.insert_after(1.5, 1)
 node_mgmt.desc()
 ```
+
