링크드리스트

--- a/자료구조/5. 대표적인 데이터 구조 링크드 리스트 (Linked List).md
+++ b/자료구조/5. 대표적인 데이터 구조 링크드 리스트 (Linked List).md
@@ -51,7 +51,7 @@ node1 = Node(1)
 node2 = Node(2)
 # node1, node2 객체가 2개 만들어진다.
 node1.next = node2
-head = node1
+head = node1 
 # 가장 맨앞에 있는 노드는 node1
 ```
 
@@ -69,6 +69,7 @@ def add(data):
     node = head
     while node.next:
         node = node.next
+        # 노드의 다음 주소가 있다면 다음 노드의 위치로 가게 된다. 다음 노드가 없다면 마지막 노드이다.
     node.next = Node(data) 
 ```
 
@@ -192,9 +193,10 @@ class Node:
 class NodeMgmt:
     def __init__(self, data):
         self.head = Node(data)
-        
+# Mgmt - 노드 관리하는 것        
     def add(self, data):
         if self.head == '':
+        # head가 없다면
             self.head = Node(data)
         else:
             node = self.head
@@ -267,14 +269,16 @@ class NodeMgmt:
             node = node.next
     
     def delete(self, data):
+    # 특정값을 가진 데이터를 삭제하기 위해 인자값을 data로 받아야 된다.
         if self.head == '':
             print ("해당 값을 가진 노드가 없습니다.")
-            return
+            return # 끝내는것
         
         if self.head.data == data:
             temp = self.head
             self.head = self.head.next
             del temp
+            #temp 객체가 색제가 된다.
         else:
             node = self.head
             while node.next:
