더블링크드 리스트

--- a/자료구조학습/5. 대표적인 데이터 구조 링크드 리스트 (Linked List).md
+++ b/자료구조학습/5. 대표적인 데이터 구조 링크드 리스트 (Linked List).md
@@ -487,14 +487,19 @@ print (node.data)
 
 ### 7. 다양한 링크드 리스트 구조
 
-- 더블 링크드 리스트(Doubly linked list) 기본 구조
-  - 이중 연결 리스트라고도 함
-  - 장점: 양방향으로 연결되어 있어서 노드 탐색이 양쪽으로 모두 가능
-    ![img](https://www.fun-coding.org/00_Images/doublelinkedlist.png)(출처: wikipedia, https://en.wikipedia.org/wiki/Linked_list)
+- 기존의 리크드 리스트
+
+![image](https://user-images.githubusercontent.com/58652391/97141726-a2e52880-17a2-11eb-833c-52b6121619f8.png)
+
+- 더블 링크드 리스트(Doubly linked list) 기본 구조![image](https://user-images.githubusercontent.com/58652391/97141783-bf816080-17a2-11eb-93c7-e65c1eb09569.png)
+
+- 이중 연결 리스트라고도 함
+- 장점: 양방향으로 연결되어 있어서 노드 탐색이 양쪽으로 모두 가능
+  ![img](https://www.fun-coding.org/00_Images/doublelinkedlist.png)(출처: wikipedia, https://en.wikipedia.org/wiki/Linked_list)
 
 In [2]:
 
-```
+```python
 class Node:
     def __init__(self, data, prev=None, next=None):
         self.prev = prev
@@ -513,17 +518,21 @@ class NodeMgmt:
         else:
             node = self.head
             while node.next:
+            # node.netx == None이라면 해당 반복문이 끝나게 된다.
                 node = node.next
             new = Node(data)
             node.next = new
             new.prev = node
             self.tail = new
+            # tail은 맨끝에 데이터를 가리키는 것이다.
 
     def desc(self):
+        # 노드의 데이터를 출력하는 함수
         node = self.head
         while node:
             print (node.data)
             node = node.next
+            # node는 node의 next 값을 가지고 있기 때문에 None이 되면 출력을 멈추게 된다.
 ```
 
 In [3]:
