더블링크드리스트 head, tail 정보 확인 및 데이터 넣기

--- a/자료구조학습/5. 대표적인 데이터 구조 링크드 리스트 (Linked List).md
+++ b/자료구조학습/5. 대표적인 데이터 구조 링크드 리스트 (Linked List).md
@@ -602,6 +602,7 @@ class NodeMgmt:
             else:
                 node = node.next
         return False
+        # 전체를 다 검색해 봤는데 다음 노드가 존재하지 않는다면
     
     def search_from_tail(self, data):
         if self.head == None:
@@ -624,6 +625,7 @@ class NodeMgmt:
             while node.data != before_data:
                 node = node.prev
                 if node == None:
+                # 앞에 데이터가 없다는 뜻
                     return False
             new = Node(data)
             before_new = node.prev
