--- a/RDBMS/2장 인덱스의 유형과 특징.md
+++ b/RDBMS/2장 인덱스의 유형과 특징.md
@@ -19,12 +19,28 @@
 
 
 ### 2.2.1 비트맵 인덱스의 탄생배경 (B-Tree 인덱스의 문제점)
-
 B-Tree 인덱스에서는 실제 컬럼값을 인덱스에도 보관하고 있어야 하고, 컬럼값의 분포도가 좁아야 한다. 분포도가 넓으면 오히려 전체 테이블을 모두 액세스하는 것보다 불리할 수 있다. 이를 해결하기 위해 결합인덱스를 사용하였다. 그러나 결합인덱스의 경우 조건을 사용하지 않는 컬럼이나 '=' 조건이 아닌 경우가 있으면 액세스 효율이 크게 저하되는 문제를 가지고 있었다. 이를 위해 특정 컬럼은 여러개의 인덱스에 중복으로 구성하기도 하였다.
 
 그리고 더 심각한 문제는 카디널리티가 매우 낮은 다수의 디맨전들이 다양한 구조로 결합을 할 때이다. 이런 문제를 B-tree 인덱스로 해결하려면 엄청난 개수의 인덱스를 동원해야 한다. 또한 B-Tree의 경우 'NULL','NOT','OR'를 포함하고 있는 경우에는 인덱스로서의 가치를 발휘할 수 없다는 것이다. 처리범위만 일부 줄이고 체크조건의 역할만 할 수 있는데 체크조건의 역할은 테이블에서 액세스 할량을 줄이는데 기여하지 못한다.
 
 비트맵 인덱스는 위에서 기술한 부분에 대한 대안을 제시한다. 독립적으로 구성되어 있는 각각의 비트맵 인덱스가 필요한 순간에 서로 조합하여 목적을 달성할 수 있다는 특성은 매우 많은 부분에 영향을 미친다.
+
+### 2.2.2 비트맵 인덱스의 구조와 특성
+비트맵 인덱스는 루트블록이나 브랜치블록은 B-Tree 인덱스와 같은 구조로 되어있다. 그러나 리프블록은 아래에서 보는 것과 같이 비트맵으로 구성되어 있다.
+
+<img src="https://github.com/heejung-choi/TIL/assets/58652391/dc0f27e9-26f0-4541-919f-41f99074eb9b" width="400" height="250"/>
+
+비트맵 인덱스는 B-tree 인덱스처럼 분포도가 높지 않은 컬럼들을 굳이 결합할 필요가 없다. 각 비트맵 인덱스에서 추출한 결과를 이용해 비트맵 연산으로 처리할 수 있기 때문이다. 비트를 OR로 연산하면 1이 어느 한쪽에만 있어도 1이 되고 AND로 연산하면 어느 한쪽이라도 0이 있으면 결과는 0이다.
+
+그러나 '='이 아닌 LIKE, BETWEEN, >, < 등이 사용되면 추출할 비트가 명확하지 않기 때문에 적합하지 않다. 이러한 이유로 비트맵인덱스는 데이터웨어하우스 업무에서 주로 활용된다.
+
+### 2.2.3 비트맵 인덱스의 액세스
+비트맵 인덱스를 경유하여 테이블을 엑세스할 때에는 AND 연산하여 조건에 맞는 것들만 색출한다. 또한 그 결과를 ROWID로 변환해 테이블을 액세스한 다음 집계를 했다는 것을 나타내고 있다.
+
+
+### 2.3 함수기반 인덱스
+### 2.3.1 함수기반 인덱스의 개념 및 구조
+
 
 
 
