--- a/RDBMS/1장 데이터 저장구조와 특징.md
+++ b/RDBMS/1장 데이터 저장구조와 특징.md
@@ -1,9 +1,9 @@
-# 1부 액세스 영향 요소의 이해
+# 새로쓴 대용량 데이터베이스 솔루션 책 내용 정리
+## 1부 액세스 영향 요소의 이해
 
 ## 1장 데이터 저장구조와 특징
 ### 1.1. 테이블과 인덱스의 분리형
 ### 1.1.1. 분리형 테이블의 구조
-
 
 테이블스페이스: 논리적인 저장공간을 말함 ex) 내 소유의 토지, 건물을 신축하기 위해 마련한 부지
 세그먼트: 테이블스페이스를 용도별로 나눈 것으로, 대지 위에는 아파트와 같은 단위건물이나 구축물이 들어설 수 있듯이 세그먼트에는 데이터 오브젝트가 들어올 수 있다.
