데이터분석 스터디

--- a/ADSP/주관식 정리.md
+++ b/ADSP/주관식 정리.md
@@ -1,6 +1,56 @@
-# PART 2 데이터 분석 기획
+# PART 1 데이터의 이해
 
-### ()에 들어갈 용어를 기입하시오
+1) 고객테이블로부터 나이가 20~30대인 고객정보를 추출하기 위해 아래와 같은 SQL문을 작성하려고 한다. 다음(가)안에 들어갈 적절한 구문을 채워 쓰시오
+SELECT NAME, GENDER, SALARY
+FROM CUSTOMERS
+WHERE AGE (가) 20 AND 39
+
+답: BETWEEN
+
+2) 데이터 사이언티스트가 갖춰야 할 역량은 빅데이터 처리 및 분석에 필요한 이론적 지식과 기술적 숙련에 관련한 능력인 (가) skill과
+데티어 속에 숨겨진 가치를 발견하고 새로운 발전 기회를 만들어 내기 위한 능력인 (나) skill로 이루어진다.
+
+딥:
+가 - hard, 나 - soft
+
+3) (가)는 데이터의 가공 및 상관관계 이해를 통해 패턴을 인식하고 그 의미를 부여한 것이며, 지식을 도출하기 위한 재료가 된다.
+
+답: 정보
+
+4) 기업의 의사결정 과정을 지원하기 위한 주제 중심적으로 통합적이며 시간성을 가지는 비휘발성 데이터의 집합을 (가)라고 한다.
+
+답: 데이터웨어하우스
+
+5) 지난 몇 년간 여러 사일로 대신 하나의 데이터 소스를 추구하는 경향이 생겼다. 전사적으로 쉽게 인사이트를 공유하는데 도움이 되기 때문이다.
+다시 말해 별도로 정제되지 않은 자연스러운 상태의 아주 큰 데이터 세트인 (ㄱ)를 기업들이 구현하는 것은 2017년 새롭게 등장한 트랜드가 아니다.
+그러나 2017년은 이를 적할히 관리해 운영하는 첫해가 될 전망이다.
+
+답: 데이터 레이크
+
+6) (가) 데이터는 지역별 매출액, 영업이익률, 판매량과 같이 수치로 명확하게 표현되는 데이터로, 그 양이 증가하더라도 이를 DBMS에 저장, 검색, 분석하여 활용하기가 용이하다.
+
+답: 정량적
+
+7) (가)는 기업이 외부 공급업체 또는 제휴업체와 통합된 정보시스템으로 연계하여 시간과 비용을 최적화시키기 위한 것으로 자재구매, 생산, 제고, 유통, 판매, 고객 데이터로 구성된다.
+
+답: SCM
+
+8) 다음 빈칸에 공통적으로 들어갈 용어는?
+가) 페이스북은 2006년 f8행사를 기점으로 자신들의 소셜 그래프 자산을 외부 개발자들에 공개하고 서드파티 개발자들이 페이스북 위에서 작동하는 앱을 만들기 시작하면서
+   () 역할을 하기 시작했다.
+나) 하둡은 대규모 분산 병렬 처리의 업계 표준으로 맵리듀스 시스템과 분산 파일 시스템인 HDFS로 구성된 () 기술이며, 선형적인 성능과 용량확장성, 고장 감내성을 가지고 있다.
+다) 아마존(Amazon)은 S3와 BC2환경을 제공함으로써 ()을 위한 클라우드 서비스를 최초로 실현하였다.
+
+답: 플랫폼
+
+9) 아래에서 설명하고 있는 빅데이터 활용 기본 테크닉은 무엇인가?
+가) 생명의 진화를 모방하여 최적해를 구하는 알고리즘으로 존 홀랜드가 1975년에 개발하였다.
+나) 최대의 시청률을 얻으려면 어떤 시간ㄷ에 방송해야 하는가? 와 같은 문제를 해결할 때 사용된다.
+다) 여떤 미지의 함수 y = f(x)를 최적화하는 해 x를 찾기 위해 진화를 모방한 탐색 알고리즘이라고 말할 수 있다.
+
+답: 유전자 알고리즘
+
+# PART 2 데이터 분석 기획
 
 1) 분석 방법론의 "시스템 구현" 단계에서 시스템으로 구현된 모델은 검증을 위하여 단위 테스트, 통합 테스트, 시스템 테스트 등을 실시한다.
 이중 (    )테스트 단계는 품질관리 차원에서 진행함으로써 적용된 시스템의 객관성과 안정성을 확보한다.
