데이터분석 스터디

--- a/ADSP/주관식 정리.md
+++ b/ADSP/주관식 정리.md
@@ -121,3 +121,45 @@ WHERE AGE (가) 20 AND 39
 사용자 요구사항을 분석하여 시스템 구축 우선순위를 결정하는 등 중장기 마스터플랜을 수립하는 절차이다.
 
 답: ISP
+
+# PART 3. 데이터 분석
+
+1) 공간적 차원과 관련된 속성들을 시각화에 추가하여 지도위에 관련 속성들을 생성하고 크기, 모양, 선, 굵기 등으로 구분하여 인사이트를 얻는 분석방법은 무엇인가?
+
+답: 공간분 
+
+2) 아래 R코드의 출력 결과는?
+f <- function(x,a) return((x-a)^2)
+f(1:2.3)
+
+답: 4,1
+
+3) 아래 R코드의 출력 결과는?
+x <- c(1,2,3,NA)
+mean(x)
+
+답: NA
+
+4) 아래 R코드의 출력 결과는?
+x<-1:100
+sum(x>50)
+
+답: 50
+
+5) A반과 B반 학생들이 동일한 과목을 들었다고 하자. 
+A반과 B반 학생 모두를 대상으로 과목별 평균을 구하려고 할 때, A반 학생 데이터와 B반 학생 데이터를 class라는 변수를 기준으로 합치려고 한다.
+r로 프로그래밍 하시오.
+
+답:
+merge(A,B,by="class")
+
+6) 여러학과 학생들의 과목별 성적을 데이터 프레임으로 구성하였다. 데이터 프레임명은 test라고 할 때 경영학과 학생들의 데이터만 조회하고자 한다.
+r로 프로그래밍 하시오.
+
+답:
+susbset(test,학과="경영학과")
+
+7)SQL을 활용하거나 SAS에서 PROC SQL로 작업하던 사용자들에게 R에서 지원해주는 패키지는 무엇인가?
+
+답:
+sqldf()
