--- a/ADSP/주관식 정리.md
+++ b/ADSP/주관식 정리.md
@@ -163,3 +163,7 @@ susbset(test,학과="경영학과")
 
 답:
 sqldf()
+
+8) 평균으로부터 t Standard Deviation 이상 떨어져 있는 값들을 이상값(Outlier)으로 판단하고 t는 3으로 설정하는 이상값 검색 알고리즘은?
+
+답: ESD(Extreme Studentized Devia-tion)
