--- a/ADSP/주관식 정리.md
+++ b/ADSP/주관식 정리.md
@@ -167,3 +167,69 @@ sqldf()
 8) 평균으로부터 t Standard Deviation 이상 떨어져 있는 값들을 이상값(Outlier)으로 판단하고 t는 3으로 설정하는 이상값 검색 알고리즘은?
 
 답: ESD(Extreme Studentized Devia-tion)
+
+9) 최적방정식을 선택하기 위한 방법 중 모든 독립변수 후보를 포함한 모형에서 시작하여 가장 적은 영향이 주는 변수를 하나씩 제거하면서 더이상 유의하지 않은 변수가 없을 때까지 설명변수를 제거하는 방법은 무엇인가?
+
+답: 후진제거법
+
+10) 아래 회귀분석 모형의 추정에 대한 설명에서 (ㄱ)은 무엇인가?
+주어진 자료를 가장 잘 설명하는 회귀계수의 추정치는 보통 제곱오차를 최소로 하는 값을 구한다. 이와 같이 구해진 회귀계수 추정량을 (ㄱ)이라고 한다.
+
+답: 최소제곱
+
+11) 번호를 부여한 샘플을 나열하여 K개씩 n개의 구간을 나누고 첫 구간에서 하나를 임의로 선택한 후에 k개씩 띄어서 표본을 선택하고 매번 k번째 항목을 추출하는 표본추출방법은?
+
+답: 계통추출법
+
+12) 귀무가설이 옳은데 귀무가설을 받아들이지 않고 기각하게 되는 오류는?
+
+답: 제1종오류
+
+13) 단순 회귀스틱 모형에서 exp()의 의미는 x1,x2,x3 ...이 주어질 때 x1이 한 단위 증가 할 때마가 성공(y=1)의 (가)이/가 몇 배 증가하는지를 나타내는 값이다. 
+
+답: 오즈(승산)
+참고: 
+
+오즈 - 성공한 확률이 실패할 확률의 몇배인지를 나타내는 확률
+오즈비 - 오즈의 비율
+
+14) 시계열 수준과 분산에 체계적인 변화가 없고 엄밀하게 주기적 변동이 없다는 것으로 미래는 확률적으로 과거와 동일하다는 것을 의미하는 시계열 용어는?
+
+답: 정상성
+
+15) 시계열 모형의 여러 종류 중 아래에서 설명하는 것은 무엇인가?
+
+가) 시계열 모델 중 자기자신의 과거값을 사용하여 설명하는 모형임
+나) 백색잡음의 현재값과 자기자신의 과거값의 선형 가중합으로 이루어진 정상확률 모형
+다) 모형에 사용하는 시계열 자료의 시점에 따라 1차,2차,....p차 등을 사용하나 정상시계열 모형에서는 주로 1,2차를 사용함
+
+답: 자기회귀모형
+
+참고:
+
+자기회귀모형(AR)-> P
+P시점 전의 자료가 현재 자료에 영향을 주는 모형이다.
+AR(1)모형은 직전시점 데이터로만 분석하고 AR(2)모형은 연속된 2시점 정도의 데이터로 분석한다. 
+
+이동평균모형(MA)-> Q 
+유한한 개수의 백색잡음의 결합이므로 언제나 정상성을 만족한다.
+1차 이동평균모형 MA(1)모형은 이동평균모형 중에서 가장 간단한 모형으로 시계열이 같은시점의 백색잡음과 바로 전 시점의 백색잡음의 결합으로 이루어진 모형
+2차 이동평균모형 MA(2)모형은 바로 전 시점의 백색잡음과 시차가 2인 백색잡음의 결합으로 이루어진 모형
+
+16) 시계열에 영향을 주는 일반적인 요인을 시계열에서 분리해 분석하는 방법은 무엇인가?
+
+답: 분해시계열
+
+17) 아래는 스위스의 47개 프랑스어 사용지역의 출산율(Fertility)과 교육수준(Education)과의 관계를 회귀모형으로 추정한 것이다. 아래의 결과를 사용하여 결정계수(R의 제곱)을 계산하시오
+
+             Df   Sum    Mean      sq     fvalue    pr(>F)
+Education    1  3162.7  3162.7  35.446  3.659e-07    ***
+Residuals   45  4015.2   89.2
+
+답:
+결정계수 = ssr/(sse+ssr)
+= 3162.7/(4015.2+3162.7) = 0.441
+
+18) 자료의 위치를 나타내는 척도의 하나로 관측치를 크기순으로 배열하였을 때 전체의 중앙에 위치한 수치이다. 평균에 비해 이상치에 의한 영향이 적기 때문에 자료의 분포가 심하게 비대칭인 경우 중심을 파악할 때 합리적인 방법이다.
+
+답: 중앙값
