--- a/ADSP/주관식 정리.md
+++ b/ADSP/주관식 정리.md
@@ -228,6 +228,7 @@ Residuals   45  4015.2   89.2
 
 답:
 결정계수 = ssr/(sse+ssr)
+ssr(설명 가능한 수치) sse(설명 불가능한 수치)
 = 3162.7/(4015.2+3162.7) = 0.441
 
 18) 자료의 위치를 나타내는 척도의 하나로 관측치를 크기순으로 배열하였을 때 전체의 중앙에 위치한 수치이다. 평균에 비해 이상치에 의한 영향이 적기 때문에 자료의 분포가 심하게 비대칭인 경우 중심을 파악할 때 합리적인 방법이다.
