데이터 스터디

--- a/ADSP/주관식 정리.md
+++ b/ADSP/주관식 정리.md
@@ -234,3 +234,45 @@ ssr(설명 가능한 수치) sse(설명 불가능한 수치)
 18) 자료의 위치를 나타내는 척도의 하나로 관측치를 크기순으로 배열하였을 때 전체의 중앙에 위치한 수치이다. 평균에 비해 이상치에 의한 영향이 적기 때문에 자료의 분포가 심하게 비대칭인 경우 중심을 파악할 때 합리적인 방법이다.
 
 답: 중앙값
+
+19) 모형 평가방법 중 주어진 원천 데이터를 랜덤하게 두 분류로 분리하여 교차 검정을 실시하는 방법으로 하나의 모형의 학습 및 구축을 위한 훈련용 자료로
+다른 하나는 성과 평가를 위한 검증용 자료로 사용하는 방법은 무엇인가?
+
+답: 홀드아웃방법
+
+20) 베어즈정리와 특징에 대한 조건부 독립을 가설로 하는 알고리즘으로 클래스에 대한 사전 정보와 데이터로부터 추출된 정보를 결합하고
+베어즈 정리를 이용하여 어떤 데이터가 특정 클래스에 속하는지를 분류하는 알고리즘은 무엇인가?
+
+답: 나이브 베이지안 분류
+
+21) 신경망 모형에서 계산되는 함수로서 표준화 지수 함수로 불리며, 출력값 Z가 여러개로 주어지고 목표치가 다범주인 경우 
+각 범주에 속할 사후 확률을 제공하여 출력 노드에 주로 사용되는 함수는
+
+답: softmax 함수
+
+22) 두개체의 거리에 기반하여 군집을 형성해가는 계층형 군집방법에서 사용되는 측도 중 
+두 개체의 백터 내적을 기반하여 계산할 수 있는 유사성 측도는 무엇인가?
+
+답: 코사인 유사도
+
+23) 혼합분포군집은 모형 기반의 군집 방법으로서 데이터가 k개의 모수적 모형의 가중합으로 표현되는 모집단 모형으로부터 나왔다는 가정하에서 분석하는 방법이다.
+k개의 각 모형은 군집을 의미하며 이 혼합모형의 모수와 가중치의 최대가능도 추정에 사용되는 알고리즘은 무엇인가?
+
+답: EM알고리즘
+
+24) 군집분석의 품질을 정량적으로 평가하는 대표적인 지표로 군집내의 데이터 응집도와 군집간 분리도를 계산하여
+군집내의 데이터의 거리가 짧을 수록, 군집간 거리가 멀수록 값이 커지며 완벽한 분리일 경우 1의 값을 가지는 지표는?
+
+답: 실루엣
+
+25) SOM에서는 각 학습단계마다 입력층의 데이터 집합으로부터 하나의 표본 벡터를 임의로 선택하고 경쟁층의 프로토타입 벡터와의 거리를 계산하고
+가장 가까운 프로토타입 벡터를 계산하는데 이 때 선택된 프로토타입 벡터를 나타내는 용어는 무엇인가?
+
+답:BMU
+
+26) 랜덤 모델과 비교하여 해당 모델의 성과가 얼마나 좋아졌는지를 각 등급별로 파악하는 그래프로
+상위등급에서 매우 크고 하위 등급으로 갈수록 감소하게 되면 일반적으로 모형의 예측력이 적절하다고 판단하게 된다.
+모형평가에서 사용되는 이 그래프는 무엇인가?
+
+답: 향상도 곡선
+
